favicon and id change

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Portfolio</title>
     <meta name="description" content="Akash's Site" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="/" />
+    <link rel="icon" href="favicon.ico" />
     <link rel="stylesheet" href="css/hermes.css" />
     <link
       rel="search"
@@ -33,7 +33,7 @@
           <li class="nav-list-item">
             <a
               class="nav-list-link"
-              href="https://github.com/akashinfinity12"
+              href="https://github.com/akashzsh"
               target="_blank"
               >GITHUB</a
             >
@@ -165,9 +165,9 @@
                     <tr>                    
                       <td class="code">
                         <pre><a
-                          href="2023/08/25/hello-world/Akash_Dsouza_Resume_25-08-2023-17-06-46.pdf"
-                          title="Akash_Dsouza_Resume_25-08-2023-17-06-46.pdf"
-                          >Akash_Dsouza_Resume_25-08-2023-17-06-46.pdf</a
+                          href="2023/08/25/hello-world/Akash_Dsouza_Resume_25-08-2023-19-33-55.pdf"
+                          title="Akash_Dsouza_Resume_25-08-2023-19-33-55.pdf"
+                          >Akash_Dsouza_Resume_25-08-2023-19-33-55.pdf</a
                         ></pre>
                       </td>
                     </tr>
@@ -186,10 +186,10 @@
                   <table>
                     <tr>
                       <td class="gutter">
-                        <pre><span class="line">1</span><br><span class="line">2</span><br><span class="line">3</span><br></pre>
+                        <pre><span class="line">1</span><br><span class="line">2</span><br><span class="line">3</span><br><br><span class="line">4</span><br></pre>
                       </td>
                       <td class="code">
-                        <pre><span class="line">$ Discord: <span class="string">&quot;akashzsh&quot;</span></span><br><span class="line">$ LinkedIn: <span class="string">&quot;/in/akashzsh&quot;</span></span><br><span class="line">$ Email: <span class="string">&quot;akashinfinity12@gmail.com&quot;</span></span><br></pre>
+                        <pre><span class="line">$ Discord: <span class="string">&quot;akashzsh&quot;</span></span><br><span class="line">$ LinkedIn: <span class="string">&quot;/in/akashzsh&quot;</span></span><br><span class="line">$ Email: <span class="string">&quot;<a href=mailto:akashinfinity12@gmail.com>akashinfinity12@gmail.com</a>&quot;</span></span><br><span class="line">$ Coding Platforms: <span class="string">&quot;akashzsh&quot;</span></span></pre>
                       </td>
                     </tr>
                   </table>
