--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         <pre><span class="line">1</span><br><span class="line">2</span><br><span class="line">3</span><br><span class="line">4</span><br><span class="line">5</span><br></pre>
                       </td>
                       <td class="code">
-                        <pre><span class="line">As of 04-11-2023</span><br><span class="line"><span class="string">&quot;Studying Planck&#x27;s Quantum Theory and Maxwell&#x27;s Electromagnetic Theory&quot;</span></span><br><span class="line"><span class="string">&quot;KÖssel-Lewis Approach to Chemical Bonding&quot;</span></span><br><span class="line"><span class="string">&quot;Solving problems on leetcode&quot;</span></span><br><span class="line"><span class="string">&quot;Watching One Piece - Whole Cake Island Saga&quot;</span></span><br></pre>
+                        <pre><span class="line">As of 01-01-2024</span><br /><span class="line"><span class="string">&quot;Solving problems on leetcode&quot;</span></span><br /><span class="line"><span class="string">&quot;Watching One Piece - Wano Country Saga&quot;</span></span><br /><span class="line"><span class="string">&quot;Reading Valmiki's Ramayana&quot;</span></span><br /><span class="line"><span class="string">&quot;Reading Roman Catholic Bible&quot;</span></span><br /></pre>
                       </td>
                     </tr>
                   </table>
