update on current work

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         <pre><span class="line">1</span><br><span class="line">2</span><br><span class="line">3</span><br><span class="line">4</span><br><span class="line">5</span><br></pre>
                       </td>
                       <td class="code">
-                        <pre><span class="line">As of 01-01-2024</span><br /><span class="line"><span class="string">&quot;Solving problems on leetcode&quot;</span></span><br /><span class="line"><span class="string">&quot;Watching One Piece - Wano Country Saga&quot;</span></span><br /><span class="line"><span class="string">&quot;Reading Valmiki's Ramayana&quot;</span></span><br /><span class="line"><span class="string">&quot;Reading Roman Catholic Bible&quot;</span></span><br /></pre>
+                        <pre><span class="line">As of 21-02-2024</span><br /><span class="line"><span class="string">&quot;Solving problems on leetcode&quot;</span></span><br /><span class="line"><span class="string">&quot;Watching One Piece - Wano Country Saga&quot;</span></span><br /><span class="line"><span class="string">&quot;Watching Jujutsu Kaisen Season 2&quot;</span></span><br /><span class="line"><span class="string">&quot;Learning Spring for current office project&quot;</span></span><br /></pre>
                       </td>
                     </tr>
                   </table>
