--- a/index.html
+++ b/index.html
@@ -105,9 +105,7 @@
                       <td class="gutter">
                         <pre><span class="line">1</span><br><span class="line">2</span><br><span class="line">3</span><br><span class="line">4</span><br><span class="line">5</span><br></pre>
                       </td>
-                      <td class="code">
-                        <pre><span class="line">Programming Languages: <span class="string">&quot;Java, JavaScript, C, C++, Python&quot;</span></span><br><span class="line">Frameworks: <span class="string">&quot;React, React Native, Django, Express JS, Node JS&quot;</span></span><br><span class="line">Database: <span class="string">&quot;MongoDB, MySQL, PostgreSQL, MS SQL Server&quot;</span></span><br><span class="line">Documentation: <span class="string">&quot;LaTeX, Microsoft Office&quot;</span></span><br><span class="line">Natural Science: <span class="string">&quot;Higher Mathematics, Physics&quot;</span></span><br></pre>
-                      </td>
+                      <td class=code><pre><span class=line>Programming Languages: <span class=string>"Java, JavaScript, C, C++, Python"</span></span><br><span class=line>Frameworks: <span class=string>"React, Spring, React Native, Express JS, Node JS"</span></span><br><span class=line>Database: <span class=string>"MongoDB, PostgreSQL, MySQL, MS SQL Server"</span></span><br><span class=line>Documentation: <span class=string>"LaTeX, Microsoft Office"</span></span><br><span class=line>Natural Science: <span class=string>"Higher Mathematics, Physics"</span></span><br></pre>
                     </tr>
                   </table>
                 </figure>
@@ -151,7 +149,7 @@
                         <pre><span class="line">1</span><br><span class="line">2</span><br><span class="line">3</span><br><span class="line">4</span><br><span class="line">5</span><br></pre>
                       </td>
                       <td class="code">
-                        <pre><span class="line">As of 21-02-2024</span><br /><span class="line"><span class="string">&quot;Solving problems on leetcode&quot;</span></span><br /><span class="line"><span class="string">&quot;Watching One Piece - Wano Country Saga&quot;</span></span><br /><span class="line"><span class="string">&quot;Watching Jujutsu Kaisen Season 2&quot;</span></span><br /><span class="line"><span class="string">&quot;Learning Spring for current office project&quot;</span></span><br /></pre>
+                        <pre><span class="line">As of 07-03-2024</span><br><span class="line"><span class="string">&quot;Solving problems on leetcode&quot;</span></span><br><span class="line"><span class="string">&quot;Watching One Piece - Wano Country Saga&quot;</span></span><br><span class="line"><span class="string">&quot;Watching One Punch Man&quot;</span></span><br><span class="line"><span class="string">&quot;Learning Spring for current office project&quot;</span></span><br></pre>
                       </td>
                     </tr>
                   </table>
@@ -203,7 +201,7 @@
       <footer>
         <div class="paginator"></div>
         <div class="copyright">
-          <p>© 2023 Created by Akash</p>
+          <p>© 2024 Created by Akash</p>
         </div>
       </footer>
     </div>
