--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         <pre><span class="line">1</span><br><span class="line">2</span><br><span class="line">3</span><br><span class="line">4</span><br><span class="line">5</span><br></pre>
                       </td>
                       <td class="code">
-                        <pre><span class="line">As of 25-03-2024</span><br><span class="line"><span class="string">&quot;Solving problems on leetcode&quot;</span></span><br><span class="line"><span class="string">&quot;Watching One Piece - Egg Head Arc&quot;</span></span><br><span class="line"><span class="string">&quot;Reading Uttar Ramayana&quot;</span></span><br><span class="line"><span class="string">&quot;Learning Spring for current office project&quot;</span></span><br></pre>
+                        <pre><span class="line">As of 05-05-2024</span><br><span class="line"><span class="string">&quot;Solving problems on leetcode&quot;</span></span><br><span class="line"><span class="string">&quot;Watching One Piece - Egg Head Arc&quot;</span></span><br><span class="line"><span class="string">&quot;Reading Krishna Purana&quot;</span></span><br><span class="line"><span class="string">&quot;Learning Spring for current office project&quot;</span></span><br></pre>
                       </td>
                     </tr>
                   </table>
