--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         <pre><span class="line">1</span><br><span class="line">2</span><br><span class="line">3</span><br><span class="line">4</span><br><span class="line">5</span><br></pre>
                       </td>
                       <td class="code">
-                        <pre><span class="line">As of 05-05-2024</span><br><span class="line"><span class="string">&quot;Solving problems on leetcode&quot;</span></span><br><span class="line"><span class="string">&quot;Watching One Piece - Egg Head Arc&quot;</span></span><br><span class="line"><span class="string">&quot;Reading Krishna Purana&quot;</span></span><br><span class="line"><span class="string">&quot;Learning Spring for current office project&quot;</span></span><br></pre>
+                        <pre><span class="line">As of 05-10-2024</span><br><span class="line"><span class="string">&quot;Solving problems on leetcode&quot;</span></span><br><span class="line"><span class="string">&quot;Watching Demon Slayer - Swordsmith Village Arc&quot;</span></span><br><span class="line"><span class="string">&quot;Reading about Lord Krishna&quot;</span></span><br><span class="line"><span class="string">&quot;Watching One Piece&quot;</span></span><br></pre>
                       </td>
                     </tr>
                   </table>
@@ -188,15 +188,15 @@
                         <pre><span class="line">1</span><br><span class="line">2</span><br><span class="line">3</span><br><br><span class="line">4</span><br></pre>
                       </td>
                       <td class="code">
-                        <pre><span class="line">$ Discord: <span class="string">&quot;akashzsh&quot;</span></span><br><span class="line">$ LinkedIn: <span class="string">&quot;/in/akashzsh&quot;</span></span><br><span class="line">$ Email: <span class="string">&quot;<a href=mailto:akashinfinity12@gmail.com>akashinfinity12@gmail.com</a>&quot;</span></span><br><span class="line">$ Coding Platforms: <span class="string">&quot;akashzsh&quot;</span></span><br><span class="line">$ Instagram: <span class="string">&quot;akashzsh&quot;</span></span><br><span class="line">$ Snapchat: <span class="string">&quot;akashzsh&quot;</span></span></pre>
+                        <pre><span class="line">$ Discord: <span class="string">&quot;akashzsh&quot;</span></span><br><span class="line">$ LinkedIn: <span class="string">&quot;<a href=https://www.linkedin.com/in/akashzsh/>/in/akashzsh</a>&quot;</span></span><br><span class="line">$ Email: <span class="string">&quot;<a href=mailto:akashinfinity12@gmail.com>akashinfinity12@gmail.com</a>&quot;</span></span><br><span class="line">$ Coding Platforms: <span class="string">&quot;akashzsh&quot;</span></span><br><span class="line">$ Instagram: <span class="string">&quot;<a href=https://www.instagram.com/akashzsh/>akashzsh</a>&quot;</span></span><br><span class="line">$ Snapchat: <span class="string">&quot;akashzsh&quot;</span></span></pre>
                       </td>
                     </tr>
                   </table>
                 </figure>
-                <p>
+                <!-- <p>
                   Status:
                   <a href="">Instagram and Snapchat are currently deactivated. They will be activated soon.</a>
-                </p>
+                </p> -->
               </div>
             </article>
           </li>
@@ -205,7 +205,7 @@
       <footer>
         <div class="paginator"></div>
         <div class="copyright">
-          <p>© 2024 Created by Akash</p>
+          <p>© 2024 Created by Akash Science</p>
         </div>
       </footer>
     </div>
