--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                       <pre><span class="line">1</span><br><span class="line">2</span><br><span class="line">3</span><br><span class="line">4</span><br><span class="line">5</span><br><span class="line">6</span><br></pre>
                     </td>
                     <td class="code">
-                      <pre><span class="line">cout &lt;&lt; <span class="string">&quot;Name: Ayyadevara Akash&quot;</span>;</span><br><span class="line">cout &lt;&lt; <span class="string">&quot;DOB: 12-12-2001&quot;</span>;</span><br><span class="line">cout &lt;&lt; <span class="string">&quot;Location: Bombay&quot;</span>;</span><br><span class="line">cout &lt;&lt; <span class="string">&quot;Native: Udupi, Karnataka&quot;</span>;</span><br><span class="line">cout &lt;&lt; <span class="string">&quot;Qualification: BE in Computer Engineering&quot;</span>;</span><br><span class="line">cout &lt;&lt; <span class="string">&quot;Engineering College: FCRIT&quot;</span>;</span><br></pre>
+                      <pre><span class="line">cout &lt;&lt; <span class="string">&quot;Name: Ayyadevara Akash&quot;</span>;</span><br><span class="line">cout &lt;&lt; <span class="string">&quot;DOB: 12-12-2001&quot;</span>;</span><br><span class="line">cout &lt;&lt; <span class="string">&quot;Location: Kurla, Bombay&quot;</span>;</span><br><span class="line">cout &lt;&lt; <span class="string">&quot;Native: Dakshina Kannada&quot;</span>;</span><br><span class="line">cout &lt;&lt; <span class="string">&quot;Qualification: BE in Computer Engineering&quot;</span>;</span><br><span class="line">cout &lt;&lt; <span class="string">&quot;Engineering College: FCRIT, Mumbai University&quot;</span>;</span><br></pre>
                     </td>
                   </tr>
                 </table>
